# vpn_tg_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: plans.toml
config/examples/: secrets.example.toml
docs/: kubernetes-rollout.md  operations.md  payments.md  scaling.md  vpn-stack.md
k8s/: backups.yaml  bot.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  xui-template.yaml
k8s/monitoring/: alertmanager-telegram-secret.example.yaml  kube-prometheus-stack-values.yaml  kustomization.yaml  prometheus-rules.yaml  servicemonitors.yaml
k8s/optional/: vault-backups.yaml  vault.yaml
ops/k3s/: build_and_import_image.sh  create_alertmanager_telegram_secret.sh  create_runtime_secret.sh  install_monitoring_stack.sh  rollout_bot.sh  send_test_alert.sh
ops/systemd/: install_bot_units.sh  restart_bot_services.sh  vpn-bot-backup.env.example  vpn-bot-nightly-backup.service  vpn-bot-nightly-backup.timer  vpn-bot-web.service  vpn-bot-worker.service
scripts/: check_secrets.py  nightly_backup.sh  restore_check.sh
src/vpn_bot/: __init__.py  __main__.py  app.py  config.py  database.py  formatters.py  keyboards.py  metrics.py  migrations.py  (+4 more)
tests/: test_admin_custom_grant.py  test_app.py  test_config.py  test_custom_plans.py  test_database_and_crypto.py  test_datetimes.py  test_invoice_formatting.py  test_jobs.py  test_nodes.py  test_payments.py  test_subscriptions_multi_node.py  test_traffic_policy.py  test_user_handlers.py  test_web.py  test_xui_links.py
(+11 files in other folders)
