[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bot-for-vpn"
version = "0.1.0"
description = "Telegram bot for VPN subscriptions with 3x-ui integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "aiogram>=3.7,<4.0",
  "SQLAlchemy>=2.0,<3.0",
  "aiosqlite>=0.20,<1.0",
  "greenlet>=3.0,<4.0",
  "httpx>=0.27,<1.0",
  "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.8,<1.0",
]

[project.scripts]
vpn-bot = "vpn_bot.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vpn_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
